--- a/index.html
+++ b/index.html
@@ -5,15 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About Christian Faber</title>
+    <link rel="stylesheet" href="style/style.css" />
   </head>
   <body>
-    <header>
-      <h1>Hello, World. I'm Christian Faber</h1>
-    </header>
+    <header class="header">Hello, World. I'm Christian Faber</header>
 
     <section class="cards">
       <div class="card">
-        <img class="card-image" src="food.jpeg" alt="a yummy piece of travel" />
+        <img
+          class="card-image"
+          src="images/food.jpeg"
+          alt="a yummy piece of cooking"
+        />
         <p class="card-title">Food</p>
         <p class="card-content">
           Cooking is a way to break away from everything else! My foods are
@@ -25,7 +28,7 @@
       <div class="card">
         <img
           class="card-image"
-          src="travel.jpeg"
+          src="images/travel.jpeg"
           alt="a yummy piece of travel"
         />
         <p class="card-title">Travel</p>
@@ -37,7 +40,11 @@
         </p>
       </div>
       <div class="card">
-        <img class="card-image" src="surf.jpeg" alt="a yummy piece of travel" />
+        <img
+          class="card-image"
+          src="images/surf.jpeg"
+          alt="a yummy piece of surf"
+        />
         <p class="card-title">Surf</p>
         <p class="card-content">
           Surfing is a newer passion of mine! Moving to Kauaʻi was my first
@@ -48,22 +55,28 @@
         </p>
       </div>
       <div class="card">
-        <img class="card-image" src="cp.jpeg" alt="a dope-ass logo" />
+        <img
+          class="card-image"
+          src="images/cp.jpeg"
+          alt="a (hopefully) dope-ass logo"
+        />
         <p class="card-title">Community Pursuit</p>
         <p class="card-content">
           I recently started a new business! The work I do currently involves
           data analysis, information tools, and collaborating and facilitating
           interest groups. The origin of the business creation was to satisfy an
           ability to work with an organization I previously worked with;
-          however, this was the perfect launching pad to support community
-          projects, work with local organizations, and pursue innovation!
+          however, this was the perfect launching pad for a career in supporting
+          community projects, working with local organizations, and pursuing
+          innovation! It's currently my first tax season as an operational
+          business owner! YIKES!
         </p>
       </div>
     </section>
 
-    <footer>
+    <footer class="footer">
       Made with
-      <span class="footer-heart"> &lt;3 </span>
+      <span class="footer-heart">&#9829;</span>
       by Christian
     </footer>
   </body>
